tests/ok/init-while-true-noreturn.ari
fn main() -> i64 {
  init i = 0 while true {
    continue i + 1;
  } next i + 1
}
