tests/errors/attribute-export-argument.ari
@export(123)
fn bad() -> i64 {
  return 1;
}

fn main() -> i64 {
  return 0;
}
